# CellTK

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  README.md  nodep_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  python-publish-manual.yml  python-publish.yml
base/: custom_array.py  operation.py  pipeline.py  utils.py
base/unet_utils/: unet_model.py
cellst/: __init__.py  custom_array.py  evaluate.py  extract.py  operation.py  orchestrator.py  pipeline.py  process.py  segment.py  track.py
cellst/core/: arrays.py  operation.py  orchestrator.py  pipeline.py
cellst/utils/: _fastkde.py  _types.py  bayes_utils.py  cli_utils.py  estimator_utils.py  file_utils.py  filter_utils.py  info_utils.py  kit_sch_ge_utils.py  log_utils.py  metric_utils.py  operation_utils.py  plot_utils.py  process_utils.py  slurm_utils.py  unet_model.py  utils.py  yaml_utils.py
celltk/: __init__.py  evaluate.py  extract.py  process.py  segment.py  track.py
celltk/config/: bayes_config_2d.json  unet_example_cell_weights.tf.index  upeak_example_weights.tf.index
celltk/core/: arrays.py  operation.py  orchestrator.py  pipeline.py
celltk/utils/: _types.py  bayes_utils.py  cli_utils.py  estimator_utils.py  file_utils.py  filter_utils.py  info_utils.py  kit_sch_ge_utils.py  metric_utils.py  operation_utils.py  peak_utils.py  plot_utils.py  process_utils.py  (+3 more)
config/: bayes_config.json  bayes_config_simple.json  upeak_example_weights.tf.index
docs/: arrays.rst  conf.py  eva.rst  ext.rst  index.rst  opers.rst  plots.rst  pro.rst  quick.rst  requirements.txt  seg.rst  tra.rst  utils.rst
examples/: Quickstarter.ipynb  _df.hdf5  data_frame.hdf5  example_df.hdf5  example_experiment.hdf5  example_predictions.npy  example_traces.npy  experiment.hdf5
kit_sch_ge/: .gitignore  create_synth_segm_data.py  pyproject.toml  requirements.yml  run_tracking.py
tests/: array_test.py  array_tests.py  cellst_test.py  operation_test.py  pipeline_test.py  plot_tests.py  unet_test.py  upeak_test.py
tracker/: extract_data.py
(+61 files in other folders)
