[metadata]
name = CellTK
version = 0.3.1
author = Stevan Jeknic
author_email = sjeknic@stanford.edu
description = A toolkit for working with large amounts of live-cell microscopy data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sjeknic/CellTK
project_urls =
    Bug Tracker = https://github.com/sjeknic/CellTK/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = celltk
packages = find:
python_requires = >=3.8

[options.packages.find]
where = celltk